--- a/requirements.txt
+++ b/requirements.txt
@@ -68,6 +68,7 @@ protobuf==3.6.1
 psutil==5.6.1
 ptyprocess==0.6.0
 py-cpuinfo==4.0.0
+pyaml==18.11.0
 pyasn1==0.4.5
 pycodestyle==2.4.0
 pyflakes==2.0.0
